Flexbox Test Issue Solution + Final
Instead of using "flex-grow", I switched to using "flex", which allowed for setting flex-grow, flex-shrink, and flex-basis all in one line. I also cleaned up the code ever so slightly for extra readability and actually put the CSS file into the correct folder.

--- a/Resources/flexbox_test.css
+++ b/Resources/flexbox_test.css
@@ -15,19 +15,20 @@ body {
 	background-color: blue;
 	margin: 20px;
 	border-style: solid;
-	/* width: 20%; */
-
+	flex: 1 1 25%;
 }
 
 .outer2test {
 	display: flex;
 	flex-wrap: wrap;
+	flex: 2 2 25%;
 }
 
 .outer3test {
     display: flex;
     flex-direction: row;
 	flex-wrap: wrap;
+	flex: 2 2 25%;
 }
 
 .inner_1 {
