--- a/Resources/grid_test.css
+++ b/Resources/grid_test.css
@@ -27,6 +27,7 @@ body {
 
 .outer3test {
     grid-template-columns: 40% 40% 20%;
+	grid-template-rows: 60% 40%;
     gap: 0px;
 }
 
@@ -43,8 +44,8 @@ body {
 
 .inner_3 {
 	background-color: orange;
-	width: 80px;
-    height: 40px;
+	width: auto;
+    height: auto;
 	margin: 8px;
     border-style: solid;
     border-width: 1px;
