Navbar Test 1 Issue Solution
Using flex-flow to make the flexbox start on the right side rather than the left helped fix the issue.

--- a/Resources/navbar_test_1.css
+++ b/Resources/navbar_test_1.css
@@ -23,6 +23,7 @@ body {
     width: 50%;
     height: auto;
     flex-wrap: wrap;
+    background-color: blue;
 }
 
 .navbutton {
@@ -31,7 +32,7 @@ body {
     align-items: center;
     height: 100%;
     width: auto;
-    background-color: blue;
+    
 }
 
 .loginbutton {
@@ -39,4 +40,6 @@ body {
     align-items: center;
     background-color: pink;
     height: 100%;
+    margin-right: 35%;
+    width: 30%;
 }
