--- a/Resources/navbar_test_1.css
+++ b/Resources/navbar_test_1.css
@@ -40,6 +40,6 @@ body {
     align-items: center;
     background-color: pink;
     height: 100%;
-    margin-right: 35%;
+    /*margin-right: 35%;*/
     width: 30%;
 }
