--- a/Resources/main.css
+++ b/Resources/main.css
@@ -2,13 +2,17 @@ body {
 	height: 100%;
     padding: 0px;
     margin: 0px;
+    
 }
 
 .grid-container {
     display: grid;
-    height: 100%;
-    grid-template-rows: auto auto auto;
+    height: 100vh;
+    grid-template-rows: auto 1fr auto;
+    background-color: greenyellow;
 }
+
+/*navigation bar code*/
 
 .navbar {
     display: flex;
@@ -16,12 +20,10 @@ body {
     flex-flow: row-reverse;
     background-color: orange;
     width: 100%;
-    height: 56px;
 }
 
 .navsplit {
     display: flex;
-    /*width: 50%;*/
     height: auto;
     flex-wrap: wrap;
     background-color: blue;
@@ -36,11 +38,35 @@ body {
     
 }
 
+.logobutton {
+    width: 72px;
+    background-color: green;
+    padding: 8px;
+}
+
 .loginbutton {
     display: flex;
     align-items: center;
     background-color: pink;
     height: 100%;
-    /*margin-right: 35%;*/
     width: 120px;
+}
+
+/*footer code*/
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    flex-flow: row-reverse;
+    justify-content: space-between;
+    background-color: orange;
+    width: 100%;
+    height: 56px;
+}
+
+.footersplit {
+    display: flex;
+    height: auto;
+    flex-wrap: wrap;
+    background-color: blue;
 }
