--- a/Resources/main.css
+++ b/Resources/main.css
@@ -79,7 +79,7 @@ body {
     height: 100%;
     width: 100%;
     grid-template-columns: 50% 50%;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: auto auto auto 1fr;
 }
 
 .herobanner {
