--- a/Resources/calendar.css
+++ b/Resources/calendar.css
@@ -6,8 +6,8 @@
 .calendar {
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 8px;
+
     max-width: 700px;
     width: 100%;
-    height: 100%;
+    height: 1300px;
 }
