Text Area Issue
This is my first time using the <textarea> element and I'm not entirely sure how to make it stop extending once it reaches the edge of the screen. I have an idea where I stop the screen from being able to scroll sizeways, but I'll have to see.

--- a/Resources/contact.css
+++ b/Resources/contact.css
@@ -7,6 +7,15 @@
     background-color: blueviolet;
 }
 
-.form {
+form {
+    background-color: aquamarine;
+}
 
+.input {
+    width: 100%;
+
+}
+textarea.input {
+    height: 10em;
+    max-width: 100%;
 }
