--- a/Resources/main.css
+++ b/Resources/main.css
@@ -10,6 +10,7 @@ body {
     height: 100vh;
     grid-template-rows: auto 1fr auto;
     background-color: greenyellow;
+    font-size: 15pt;
 }
 
 /* navigation bar */
