Text Area Issue Fix
I found a solution that is significantly better than entirely preventing the webpage from scrolling sideways. There is an option to make the text area only resizable vertically rather than horizontally, which is exactly what I wanted.

--- a/Resources/main.css
+++ b/Resources/main.css
@@ -11,6 +11,7 @@ body {
     grid-template-rows: auto 1fr auto;
     background-color: greenyellow;
     font-size: 15pt;
+    overflow-x: hidden;
 }
 
 /* navigation bar */
