Contact Submit Button
I went ahead and made a submit button for the page. Currently, it doesn't do anything (and I'm not even sure if I'm going to have enough time to finish it), but it is at least there for aesthetical purposes in the meantime before it gets a use. Now, I believe I just have to clean the page up and I'll be ready to show my stakeholder!

--- a/Resources/contact.css
+++ b/Resources/contact.css
@@ -18,4 +18,16 @@ form {
 textarea.input {
     height: 10em;
     resize: vertical;
+    margin-bottom: 8px;
+}
+
+.sendbutton {
+    display: block;
+    background-color: yellowgreen;
+    width: 20%;
+    max-width: 120px;
+    height: 30px;
+    float: right;
+    border: solid 1px;
+    border-radius: 5pt;
 }
