--- a/Resources/homepage.css
+++ b/Resources/homepage.css
@@ -3,8 +3,16 @@
     background-color: magenta;
     height: 100%;
     width: 100%;
+    grid-template-columns: 100%;
+}
+
+.padding {
+    display: grid;
+    width: 70%;
     grid-template-columns: 50% 50%;
     grid-template-rows: auto auto auto 1fr;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .herobanner {
