--- a/Resources/main.css
+++ b/Resources/main.css
@@ -35,13 +35,13 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
     width: auto;
-    
+    height: 76px;
 }
 
 .logobutton {
     width: 72px;
+    height: 60px;
     background-color: green;
     padding: 8px;
 }
