--- a/Resources/contact.css
+++ b/Resources/contact.css
@@ -1,6 +1,9 @@
 .main {
     grid-template-rows: auto auto;
     padding: 32px;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .info {
