--- a/Resources/calendar.css
+++ b/Resources/calendar.css
@@ -1,12 +1,12 @@
 .main {
     display: grid;
     height: 100%;
+    background-color: #F5F5F5;
 }
 
 .calendar {
     margin-left: auto;
     margin-right: auto;
-
     max-width: 700px;
     width: 100%;
     height: 1300px;
