--- a/Resources/homepage.css
+++ b/Resources/homepage.css
@@ -1,12 +1,12 @@
 .main {
     display: grid;
-    background-color: magenta;
+    background-color: #F5F5F5;
     height: 100%;
     width: 100%;
     grid-template-columns: 100%;
 }
 
-.padding {
+.main > div {
     display: grid;
     width: 70%;
     grid-template-columns: 50% 50%;
@@ -15,11 +15,18 @@
     margin-right: auto;
 }
 
+.info {
+    grid-column: auto / span 2;
+}
+
+.info > h1, .info > p {
+    text-align: center; 
+}
+
 .herobanner {
     grid-column: auto / span 2;
     width: 100%;
     height: auto;
-    background-color: red;
 }
 
 .locationimage {
@@ -27,5 +34,4 @@
     align-items: center;
     height: auto;
     padding: 32px;
-    background-color: red;
 }
