--- a/Resources/main.css
+++ b/Resources/main.css
@@ -5,7 +5,7 @@ body {
     font-family: "Source Sans Pro", Arial, Helvetica;
 }
 
-h1 {
+h1, h2, h3 {
     font-family: "Montserrat", Verdana, Tahoma;
 }
 
