--- a/Resources/members.css
+++ b/Resources/members.css
@@ -7,24 +7,29 @@
 .member {
     display: grid;
     height: auto;
-    width: 100% - 64px;
+    width: 100%;
     margin: 32px;
     grid-template-columns: 30% 70%;
 }
 
 .tag {
-    background-color: indigo;
     grid-column: auto / span 2;
 }
 
 .memberimage {
     width: 100%;
     grid-column: auto / span 1;
-    background-color: navajowhite;
 }
 
 .contents {
     grid-column: auto / span 1;
-    background-color: burlywood;
     margin-left: 8px;
+}
+
+h2 {
+    line-height: 3px;
+}
+
+p {
+    margin: 0;
 }
