Headers Add + Styling
One of the things my stakeholder wanted changed was the addition of more headers across the rest of the pages and for the headers to not be so dark. I went ahead and did that, there's not much else to say.

--- a/Resources/members.css
+++ b/Resources/members.css
@@ -1,5 +1,6 @@
 .main {
     width: 70%;
+    padding: 32px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -8,7 +9,7 @@
     display: grid;
     height: auto;
     width: 100%;
-    margin: 32px;
+    margin-top: 32px;
     grid-template-columns: 30% 70%;
 }
 
@@ -30,6 +31,7 @@ h2 {
     line-height: 3px;
 }
 
-p {
+.member > p {
     margin: 0;
+    margin-left: 8px;
 }
