--- a/Resources/calendar.css
+++ b/Resources/calendar.css
@@ -3,6 +3,13 @@
     height: 100%;
 }
 
+.main > h1, .main > h2 {
+    text-align: center;
+}
+.main > h2 {
+    line-height: 1px;
+}
+
 .calendar {
     margin-left: auto;
     margin-right: auto;
