--- a/Resources/main.css
+++ b/Resources/main.css
@@ -102,7 +102,7 @@ h1, h2, h3 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background-color: #F5F5F5;
+    background-color: #A9B2B1;
     width: 100%;
     height: 56px;
 }
