Code Cleanup Sprint 1
Now that sprint 1 has been completed, I went ahead and cleaned up my code significantly. I went ahead and deleted the "Trials & Tests" folder as by now, I no longer have any use for the files within the folder. I also moved a chunk of repeating CSS code into main.css for extra efficiency. Another thing I did was I updated the head so that it displayed all the correct stuff (such as the charset, viewport, correct title, favicon etc). I also went ahead and did some general cleaning to my code, where I deleted useless classes, useless attributes that did nothing, and I added more comments. Overall, I believe it is safe to say that sprint 1 is now officially done!

--- a/Resources/calendar.css
+++ b/Resources/calendar.css
@@ -1,14 +1,12 @@
-.main {
-    display: grid;
-    height: 100%;
-}
-
-.main > h1, .main > h2 {
+/* headers */
+h1, h2 {
     text-align: center;
 }
 .main > h2 {
     line-height: 1px;
 }
+
+/* calendar itself */
 
 .calendar {
     margin-left: auto;
