--- a/Resources/contact.css
+++ b/Resources/contact.css
@@ -1,10 +1,8 @@
 .main {
     grid-template-rows: auto auto;
-    padding: 32px;
-    width: 70%;
-    margin-left: auto;
-    margin-right: auto;
 }
+
+/* input sections */
 
 .input {
     width: 100%;
@@ -19,6 +17,8 @@ textarea.input {
     resize: vertical;
     margin-bottom: 8px;
 }
+
+/* send button */
 
 .sendbutton {
     display: block;
