Google Maps Embed
I've embedded a location of where ECB Toastmasters is located. I originally thought that this step was going to be very difficult to do, but it turned out to be surprisingly easy! The next task, I don't think will be quite so easy in comparison though...

--- a/Resources/homepage.css
+++ b/Resources/homepage.css
@@ -54,3 +54,9 @@
     height: auto;
     padding: 32px;
 }
+
+.location-map {
+    width: 100%;
+    padding-top: 16px; 
+    aspect-ratio: 4 / 3;
+}
