Image Slideshow Issue
When I click an arrow button, the intended picture loads perfectly fine. However, this picture doesn't load when I first open the webpage. I don't know anything about javascript, so I'm not entirely sure what I'm doing honestly.

--- a/Resources/homepage.css
+++ b/Resources/homepage.css
@@ -63,18 +63,18 @@
 
 /* image carousel */
 
-* {box-sizing:border-box}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  width: 100%;
+  background-color: purple;
   position: relative;
   margin: auto;
 }
 
 /* Hide the images by default */
 .mySlides {
-  display: none;
+    display: none;
 }
 
 /* Next & previous buttons */
