Image Slideshow Positioning
I successfully positioned the image slideshow in such a way where both the slideshow and dots at the bottom are lined up correctly and are both in the centre of their quadrant. Now, all that is really left is to put all the correct images in, clean it up a little, then I can show my stakeholder!

--- a/Resources/homepage.css
+++ b/Resources/homepage.css
@@ -50,7 +50,9 @@
 
 .location-image {
     display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
     height: auto;
     padding: 32px;
 }
@@ -67,9 +69,7 @@
 /* Slideshow container */
 .slideshow-container {
   width: 100%;
-  background-color: purple;
   position: relative;
-  margin: auto;
 }
 
 /* Hide the images by default */
