--- a/Resources/homepage.css
+++ b/Resources/homepage.css
@@ -10,6 +10,7 @@
     background-size: cover;
     width: 100%;
     aspect-ratio: 1600 / 500;
+    margin-bottom: 64px;
 }
 
 .header > h1 {
@@ -28,12 +29,11 @@
     height: auto;
     grid-column: auto / span 1;
     width: 100%;
-    margin-top: 32px;
 }
 
 .info {
     grid-column: auto / span 1;
-    padding: 32px;
+    padding-left: 64px;
 }
 
 .info > h2, .info > p {
@@ -62,7 +62,7 @@
     align-items: center;
     justify-content: center;
     height: auto;
-    padding: 32px;
+    padding-left: 32px;
     margin-left: 32px;
 }
 
