Navigation Bar Improvements
Two of the suggestions made were changing the colours of hovering over the navigation bar buttons (which admittedly looked kinda ugly before, I just never realised), and adding a transition to the colour. I didn't even know there was an option to give a transition to the colour until like just recently. I only spotted the transition attribute because I realised the arrow buttons on the image carousel had a transition too.

--- a/Resources/main.css
+++ b/Resources/main.css
@@ -72,11 +72,12 @@ h1, h2, h3 {
     color: white;
     text-decoration: none;
     background-color: #006094;
+    transition: 0.3s ease;
 }
 
 .nav-button > a:hover {
-    background-color: #A9B2B1;
-    color: black;
+    background-color: #DCEBF4;
+    color: #006094;
 }
 
 .logo-button {
