--- a/Resources/main.css
+++ b/Resources/main.css
@@ -103,6 +103,8 @@ h1, h2, h3 {
     border: solid 1px;
     border-radius: 5pt;
     margin: 8px;
+    cursor: pointer;
+    transition: 0.3s ease;
 }
 
 .login-button > input:hover {
