--- a/Resources/main.css
+++ b/Resources/main.css
@@ -13,13 +13,17 @@ h1, h2, h3 {
     color: #006094
 }
 
+figure {
+    margin: 0px;
+}
+
 .grid-container {
     display: grid;
     height: 100vh;
     grid-template-rows: auto 1fr auto;
 }
 
-.main {
+main {
     display: grid;
     width: 70%;
     padding: 32px;
@@ -41,7 +45,7 @@ h1, h2, h3 {
 
 /* navigation bar */
 
-.nav-bar {
+nav {
     display: flex;
     flex-direction: row;
     flex-flow: row-reverse;
@@ -50,7 +54,7 @@ h1, h2, h3 {
     height: auto;
 }
 
-.nav-bar > div {
+nav > div {
     display: flex;
     height: auto;
     flex-wrap: wrap;
@@ -113,7 +117,7 @@ h1, h2, h3 {
 
 /* footer */
 
-.footer {
+footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -122,7 +126,7 @@ h1, h2, h3 {
     height: 56px;
 }
 
-.footer > div {
+footer > div {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
