--- a/Resources/committee.css
+++ b/Resources/committee.css
@@ -5,7 +5,7 @@
     height: auto;
     width: 100%;
     margin-top: 32px;
-    grid-template-columns: 30% 70%;
+    grid-template-columns: auto auto;
 }
 
 .tag {
@@ -18,7 +18,7 @@
 
 figure > img {
     grid-column: auto / span 1;
-    width: 100%;
+    width: 150px;
 }
 
 .member > p {
