Code Cleanup Sprint 2
Most of my changes were more to do with just changing the file structure so that the CSS files and javascript files had their own folders. I primarily did this so I personally would have an easier time working on the project. I also deleted old testing files (slideshowtest) and I added alt text to my images. I believe now, that completes sprint 2!

--- a/Resources/CSS/homepage.css
+++ b/Resources/CSS/homepage.css
@@ -6,7 +6,7 @@ main {
 /* hero banner */
 
 header {
-    background-image: url("./Images/hero_banner.jpg");
+    background-image: url("../Images/hero_banner.jpg");
     background-size: cover;
     width: 100%;
     aspect-ratio: 1600 / 500;
