--- a/root/Resources/CSS/main.css
+++ b/root/Resources/CSS/main.css
@@ -54,7 +54,7 @@ nav {
     height: auto;
 }
 
-nav > div {
+nav > div, nav > a {
     display: flex;
     height: auto;
     flex-wrap: wrap;
@@ -92,18 +92,24 @@ nav > div {
 
 /* login button */
 
-.login-button {
+div.login-button {
     display: flex;
-    flex-flow: reverse;
     align-items: center;
+    flex-direction: column;
+    justify-content: center;
     height: auto;
-    width: 136px;
+    width: 152px;
 }
 
-.login-button > input {
-    width: 100%;
+a.login-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black;
+    text-decoration: none;
+    width: 136px;
     background-color: #A2C5D9;
-    height: 30px;
+    height: 33px;
     border: solid 1px;
     border-radius: 5pt;
     margin: 8px;
@@ -111,8 +117,15 @@ nav > div {
     transition: 0.3s ease;
 }
 
-.login-button > input:hover {
+a.login-button:hover {
     background-color: #DCEBF4;
+}
+
+.greeting {
+    color: white;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 /* footer */
