Login Page + Admin Page Styling
I added styling to the two pages. Not really much more to add, the two pages now look a little bit better.

--- a/root/Resources/CSS/contact.css
+++ b/root/Resources/CSS/contact.css
@@ -20,7 +20,7 @@ textarea.input {
 
 /* send button */
 
-.sendbutton {
+.send-button {
     display: block;
     background-color: #A2C5D9;
     width: 20%;
@@ -33,6 +33,6 @@ textarea.input {
     transition: 0.3s ease;
 }
 
-.sendbutton:hover {
+.send-button:hover {
     background-color: #DCEBF4;
 }
