--- a/root/Resources/CSS/main.css
+++ b/root/Resources/CSS/main.css
@@ -153,6 +153,57 @@ footer > div {
     min-width: 76px;
 }
 
+/* modal login form */
+
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+button {
+    background-color: #04AA6D;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+button:hover {
+    opacity: 0.8;
+}
+
+.cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #F44336;
+}
+
+.imgcontainer {
+    text-align: center;
+    margin: 24px 0 12px 0;
+    position: relative;
+}
+
+img.avatar {
+    width: 40%;
+    border-radius: 50%;
+}
+
+.container {
+    padding: 16px;
+}
+
+span.psw {
+    float: right;
+    padding-top: 16px;
+}
+
 /* The Modal (background) */
 .modal {
 display: none; /* Hidden by default */
@@ -171,7 +222,7 @@ padding-top: 60px;
 /* Modal Content/Box */
 .modal-content {
 background-color: #fefefe;
-margin: 5px auto; /* 15% from the top and centered */
+margin: 5% auto 15% auto; /* 15% from the top and centered */
 border: 1px solid #888;
 width: 80%; /* Could be more or less, depending on screen size */
 }
