--- a/root/Resources/CSS/contact.css
+++ b/root/Resources/CSS/contact.css
@@ -8,6 +8,7 @@ main {
     width: 100%;
     padding: 8px;
     border-radius: 5px;
+    border: 1px solid #ccc;
     margin-top: 4px;
     margin-bottom: 12px;
 }
