--- a/root/Resources/CSS/main.css
+++ b/root/Resources/CSS/main.css
@@ -101,7 +101,7 @@ div.login-button {
     width: 152px;
 }
 
-a.login-button {
+a.login-button, button.login-button {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -117,7 +117,7 @@ a.login-button {
     transition: 0.3s ease;
 }
 
-a.login-button:hover {
+a.login-button:hover, button.login-button:hover {
     background-color: #DCEBF4;
 }
 
@@ -153,78 +153,44 @@ footer > div {
     min-width: 76px;
 }
 
-/* modal login form */
+/* modal login form*/
 
-input[type=text], input[type=password] {
+.login-input {
     width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
+    padding: 8px;
     border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-top: 4px;
+    margin-bottom: 12px;
     box-sizing: border-box;
-}
-
-button {
-    background-color: #04AA6D;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-}
-
-button:hover {
-    opacity: 0.8;
-}
-
-.cancelbtn {
-    width: auto;
-    padding: 10px 18px;
-    background-color: #F44336;
-}
-
-.imgcontainer {
-    text-align: center;
-    margin: 24px 0 12px 0;
-    position: relative;
-}
-
-img.avatar {
-    width: 40%;
-    border-radius: 50%;
+    
 }
 
 .container {
+    position: relative;
     padding: 16px;
-}
-
-span.psw {
-    float: right;
-    padding-top: 16px;
 }
 
 /* The Modal (background) */
 .modal {
 display: none; /* Hidden by default */
-position: fixed; /* Stay in place */
-z-index: 1; /* Sit on top */
+position: fixed;
+z-index: 1;
 left: 0;
 top: 0;
-width: 100%; /* Full width */
-height: 100%; /* Full height */
-overflow: auto; /* Enable scroll if needed */
-background-color: rgb(0,0,0); /* Fallback color */
-background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+width: 100%;
+height: 100%;
+overflow: hidden;
+background-color: rgba(0,0,0,0.4);
 padding-top: 60px;
 }
 
 /* Modal Content/Box */
 .modal-content {
 background-color: #fefefe;
-margin: 5% auto 15% auto; /* 15% from the top and centered */
+margin: 0% auto 15% auto; /* 15% from the top and centered */
 border: 1px solid #888;
-width: 80%; /* Could be more or less, depending on screen size */
+width: 50%; /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
