Login Popup Full Functionality
After struggling for far too long trying to use proper methods and using AJAX/jQuery, I gave up and decided to go with a much more basic method. Sure, it is kinda janky, but at least I can understand it and it works.

--- a/root/Resources/CSS/main.css
+++ b/root/Resources/CSS/main.css
@@ -211,6 +211,10 @@ color: red;
 cursor: pointer;
 }
 
+.error {
+    color: red;
+}
+
 /* Add Zoom Animation */
 .animate {
 -webkit-animation: animatezoom 0.6s;
