--- a/root/Resources/CSS/homepage.css
+++ b/root/Resources/CSS/homepage.css
@@ -1,15 +1,37 @@
-main {
-    grid-template-columns: 50% 50%;
-    grid-template-rows: auto auto auto;
+@media screen and (max-width: 800px) {
+    main {
+        grid-template-areas: "info" "stock-image" "venue" "carousel";
+    }
+    .location-carousel {
+        margin-top: 32px;
+    }
+    header {
+        background-image: url("../Images/hero_banner_m.jpg");
+        aspect-ratio: 1200 / 800;
+    }
+}
+
+@media screen and (min-width: 801px) {
+    main {
+        grid-template-areas: 
+        "stock-image info"
+        "venue carousel";
+    }
+    .info, .location-carousel {
+        margin-left: 64px;
+    }
+    header {
+        background-image: url("../Images/hero_banner.jpg");
+        aspect-ratio: 1600 / 500;
+    }
+    
 }
 
 /* hero banner */
 
 header {
-    background-image: url("../Images/hero_banner.jpg");
     background-size: cover;
     width: 100%;
-    aspect-ratio: 1600 / 500;
     margin-bottom: 64px;
 }
 
@@ -27,20 +49,23 @@ header > h1 {
     display: flex;
     align-items: center;
     height: auto;
-    grid-column: auto / span 1;
     width: 100%;
-}
-
-.info {
-    grid-column: auto / span 1;
-    padding-left: 64px;
+    grid-area: stock-image;
 }
 
 .info > h2, .info > p {
     text-align: center; 
 }
 
+.info {
+    grid-area: info;
+}
+
 /* venue section */
+
+.venue {
+    grid-area: venue;
+}
 
 address {
     text-align: center;
@@ -62,13 +87,12 @@ address {
     align-items: center;
     justify-content: center;
     height: auto;
-    padding-left: 32px;
-    margin-left: 32px;
+    grid-area: carousel;
 }
 
 .carousel-container {
-  width: 100%;
-  position: relative;
+    width: 100%;
+    position: relative;
 }
 
 .location-slides {
@@ -78,54 +102,54 @@ address {
 /* next & previous buttons */
 
 .prev-img, .next-img {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
 }
 
 .next-img {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+    right: 0;
+    border-radius: 3px 0 0 3px;
 }
 
 .prev-img:hover, .next-img:hover {
-  background-color: rgba(169, 178, 177, 0.4);
+    background-color: rgba(169, 178, 177, 0.4);
 }
 
 /* the dots */
 
 .dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
 }
 
 .active, .dot:hover {
-  background-color: #717171;
+    background-color: #717171;
 }
 
 /* fading animation */
 
 .fade {
-  animation-name: fade;
-  animation-duration: 0.5s;
+    animation-name: fade;
+    animation-duration: 0.5s;
 }
 
 @keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+    from {opacity: .4}
+    to {opacity: 1}
 }
