--- a/root/Resources/CSS/main.css
+++ b/root/Resources/CSS/main.css
@@ -174,6 +174,8 @@ footer > div {
 /* The Modal (background) */
 .modal {
 display: none; /* Hidden by default */
+align-items: center;
+justify-content: center;
 position: fixed;
 z-index: 1;
 left: 0;
@@ -182,15 +184,13 @@ width: 100%;
 height: 100%;
 overflow: hidden;
 background-color: rgba(0,0,0,0.4);
-padding-top: 60px;
 }
 
 /* Modal Content/Box */
 .modal-content {
 background-color: #fefefe;
-margin: 0% auto 15% auto; /* 15% from the top and centered */
 border: 1px solid #888;
-width: 50%; /* Could be more or less, depending on screen size */
+width: 50%;
 }
 
 /* The Close Button */
