--- a/root/Resources/CSS/main.css
+++ b/root/Resources/CSS/main.css
@@ -190,7 +190,8 @@ background-color: rgba(0,0,0,0.4);
 .modal-content {
 background-color: #fefefe;
 border: 1px solid #888;
-width: 50%;
+width: 35%;
+max-width: 500px;
 }
 
 /* The Close Button */
