Mobile Friendly Committee + Login
I made the navigation bar in a bit of a strange way, so much so that I'm not entirely sure how I'm supposed to make it more mobile friendly. Aside from that, I have made the other things mobile friendly, which I'm quite happy about! It will definitely bug me though if I never end up figuring out how to make my navigation bar more responsive though...

--- a/root/Resources/CSS/committee.css
+++ b/root/Resources/CSS/committee.css
@@ -1,15 +1,24 @@
 /* members sections */
 
+@media screen and (min-width: 601px) {
+    .member {
+        grid-template-columns: auto auto;
+    }
+
+    .tag {
+        grid-column: auto / span 2;
+    }
+
+    .member > p {
+        margin-left: 8px;
+    }
+}
+
 .member {
     display: grid;
     height: auto;
     width: 100%;
     margin-top: 32px;
-    grid-template-columns: auto auto;
-}
-
-.tag {
-    grid-column: auto / span 2;
 }
 
 .tag > h2 {
@@ -24,5 +33,4 @@ figure > img {
 .member > p {
     grid-column: auto / span 1;
     margin: 0;
-    margin-left: 8px;
 }
