--- a/root/Resources/CSS/main.css
+++ b/root/Resources/CSS/main.css
@@ -163,7 +163,6 @@ footer > div {
     margin-top: 4px;
     margin-bottom: 12px;
     box-sizing: border-box;
-    
 }
 
 .container {
@@ -171,63 +170,65 @@ footer > div {
     padding: 16px;
 }
 
-/* The Modal (background) */
+/* background behind login screen */
+
 .modal {
-display: none; /* Hidden by default */
-align-items: center;
-justify-content: center;
-position: fixed;
-z-index: 1;
-left: 0;
-top: 0;
-width: 100%;
-height: 100%;
-overflow: hidden;
-background-color: rgba(0,0,0,0.4);
+    display: none; /* hidden by default */
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0,0,0,0.4);
 }
 
-/* Modal Content/Box */
+/* modal content */
+
 .modal-content {
-background-color: #fefefe;
-border: 1px solid #888;
-width: 35%;
-max-width: 500px;
+    background-color: #fefefe;
+    border: 1px solid #888;
+    width: 35%;
+    max-width: 500px;
+    min-width: 300px;
 }
 
-/* The Close Button */
+/* close button */
+
 .close {
-/* Position it in the top right corner outside of the modal */
-position: absolute;
-right: 25px;
-top: 0;
-color: #000;
-font-size: 35px;
-font-weight: bold;
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
 }
 
-/* Close button on hover */
-.close:hover,
-.close:focus {
-color: red;
-cursor: pointer;
+.close:hover, .close:focus {
+    color: red;
+    cursor: pointer;
 }
 
 .error {
     color: red;
 }
 
-/* Add Zoom Animation */
+/* zoom animation */
+
 .animate {
--webkit-animation: animatezoom 0.6s;
-animation: animatezoom 0.6s
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
 }
 
 @-webkit-keyframes animatezoom {
-from {-webkit-transform: scale(0)}
-to {-webkit-transform: scale(1)}
+    from {-webkit-transform: scale(0)}
+    to {-webkit-transform: scale(1)}
 }
 
 @keyframes animatezoom {
-from {transform: scale(0)}
-to {transform: scale(1)}
+    from {transform: scale(0)}
+    to {transform: scale(1)}
 } 
