--- a/root/Resources/CSS/calendar.css
+++ b/root/Resources/CSS/calendar.css
@@ -1,4 +1,5 @@
 /* headers */
+
 h1, h2 {
     text-align: center;
 }
@@ -9,8 +10,7 @@ main > h2 {
 /* calendar itself */
 
 .calendar {
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     max-width: 679px;
     width: 100%;
     height: 1300px;
